fix unnecessary scrollbar on code area right panel (#72)

--- a/src/styles/LineNumHighLight.scss
+++ b/src/styles/LineNumHighLight.scss
@@ -10,6 +10,8 @@ $containerTopBottomPad: 2%;
   // height: 100% - (2 * $containerTopBottomPad);
   padding: $containerTopBottomPad 0;
   padding-bottom: 100px;
+  display: inline-block;
+  min-width: 100%;
 }
 
 .expand-collopse-button {
@@ -118,7 +120,7 @@ $containerTopBottomPad: 2%;
 }
   
   .active{
-    width: 200%;
+    width: 100%;
     background-color: var(--right-code-line-hg);
     animation-name:line-tweening;
     animation-duration:2s;
